Add description to package.json file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "human-talent",
   "version": "0.0.1",
-  "description": "",
+  "description": "This is a module for Human Talent",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
